# Splort

./: .gitignore  README.md  multiple_activities.ipynb  pyproject.toml  single_activity.ipynb
