[tool.poetry]
name = "splort"
version = "0.1.0"
description = "Testing various existing codes for plotting sport activities and using the Strava API."
authors = ["AntSGS"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"
matplotlib = "*"
pandas = "*"
requests = "*"
stravalib = "*"
python-dotenv = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
